[infra] Update build-and-test.sh for Java 17
This change adds the ability to switch between Java 8 and 17 during
testing on dist-test/jenkins.

If the string "JAVA8_OVERRIDE" is present in the commit message - in a
single line, then the build will use Java 8, otherwise Java 17 will be
the default.

Change-Id: Id1d6d65fbd58a8c96d1dca958fc66207893bb99e
(cherry picked from commit e81698be507a36e56499d68fb3454176b7626435)
Reviewed-on: http://gerrit.cloudera.org:8080/24040
Reviewed-by: Marton Greber <greber.mx@gmail.com>
Tested-by: Marton Greber <greber.mx@gmail.com>
Reviewed-by: Gabriella Lotz <lotzgabriella@gmail.com>